# kvraft

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
benchmarks/: dataset.json  dataset_canonical.json  dataset_warm.json
benchmarks/results/: compare_offline_default_threshold.csv  semantic_threshold_calibration.csv
docs/superpowers/plans/: 2026-05-15-production-llm-proxy.md
docs/superpowers/specs/: 2026-05-08-production-llm-proxy-design.md
monitoring/: prometheus.yml
scripts/: bench.py  bench_compare.py  kill-leader.sh  kill-local-leader.sh  run-local-cluster.sh
src/: __init__.py  config.py  errors.py
src/api/: __init__.py  health.py  metrics.py  query.py
src/cache/: __init__.py  core.py  embedding.py  index.py
src/concurrency/: __init__.py  single_flight.py
src/metrics/: __init__.py
src/proxy/: __init__.py  anthropic_client.py  base.py  circuit_breaker.py  gemini_client.py  openai_client.py  router.py
src/raft/: __init__.py  state_machine.py
tests/: conftest.py
tests/integration/: test_core_live.py  test_embedding_live.py  test_failover_chain.py  test_thundering_herd.py  test_ttl_eviction.py
tests/unit/: test_anthropic_client.py  test_circuit_breaker.py  test_config.py  test_core.py  test_embedding.py  test_gemini_client.py  test_health.py  test_index.py  test_lru.py  test_openai_client.py  test_provider_router.py  test_proxy_base.py  test_query.py  test_raft_state_machine.py  test_single_flight.py
