[project]
name = "kvraft"
version = "0.1.0"
description = "Distributed semantic cache for LLM APIs — Raft-replicated, HNSW-indexed."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abhishek Saini" }]

dependencies = [
    # Web framework + async
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    # Embedding model
    "sentence-transformers>=2.7",
    "torch>=2.2",
    "numpy>=1.26",
    # ANN index
    "hnswlib>=0.8",
    # Raft consensus
    "pysyncobj>=0.3.12",
    # LLM providers (Gemini primary)
    "google-generativeai>=0.5",
    # Config + validation
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # Observability
    "prometheus-client>=0.20",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
    "pre-commit>=3.7",
]
stretch = [
    # Day 3 stretch: additional providers
    "openai>=1.14",
    "anthropic>=0.25",
]
bench = [
    "matplotlib>=3.8",
    "aiohttp>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL"]
ignore = ["PLR0913"] # too-many-arguments — fine for config objects

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004"] # magic values in test assertions are idiomatic

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["hnswlib"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google.generativeai", "google.generativeai.*"]
implicit_reexport = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]
